deploy/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prison-visits-public
  labels:
    app: prison-visits-public
  annotations:
    kubernetes.io/change-cause: "<to be filled in deploy job command>"
spec:
  replicas: 4
  revisionHistoryLimit: 1
  minReadySeconds: 10
  strategy:
    rollingUpdate:
      maxSurge: 100%
      maxUnavailable: 50%
    type: RollingUpdate
  selector:
    matchLabels:
      app: prison-visits-public
  template:
    metadata:
      labels:
        app: prison-visits-public
    spec:
      containers:
      - name: prison-visits-public
        image: 754256621582.dkr.ecr.eu-west-2.amazonaws.com/prison-visits-booking/prison-visits-public:latest
        imagePullPolicy: Always
        command: ['sh', '-c', "bundle exec puma -p 3000 -C ./config/puma_prod.rb --pidfile /tmp/server.pid"]
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /ping
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 60
        readinessProbe:
          httpGet:
            path: /ping
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 60
        resources:
          limits:
            memory: "2Gi"
            cpu: "1000m"
          requests:
            memory: "125Mi"
            cpu: "15m"
