deploy/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prison-visits-public
  namespace: prison-visits-booking-production
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: prison-visits-public-prison-visits-booking-production-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"
spec:
  ingressClassName: default
  tls:
  - hosts:
    - www.prisonvisits.service.gov.uk
    secretName: prison-visits-public-www-cert
  - hosts:
    - prisonvisits.service.gov.uk
    - prison-visits-public-production.apps.live.cloud-platform.service.justice.gov.uk
    secretName: prison-visits-public-cert
  rules:
  - host: prison-visits-public-production.apps.live.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: prison-visits-public
            port:
              number: 3000
  - host: prisonvisits.service.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: prison-visits-public
            port:
              number: 3000
  - host: www.prisonvisits.service.gov.uk
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: prison-visits-public
            port:
              number: 3000
