deploy/production/network-policy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-prometheus-scraping-pvb-public
  namespace: prison-visits-booking-production
spec:
  podSelector:
    matchLabels:
      app: prison-visits-public
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: monitoring
